# apex-rust-poc

./: Cargo.toml  Makefile  README.md  apex.yaml  rust-toolchain.toml  shopify.apexlang  types.apexlang
src/: function.rs  generated.rs  main.rs
