[package]
name = "my-function"
version = "0.0.1"
description = "foo"
authors = [""]
edition = "2021"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
codegen-units = 1
debug = 0
lto = true
opt-level = "z"

[features]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
